# SAO800

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: MacOSXBundleInfo.plist.in
docs/: interface_ref.md
notes/: 2026-06-19_obs-plugin-skeleton-build.md  2026-06-19_rtsp-lag-fix-sao800-kickoff.md  2026-06-21_dependency-baseline-and-local-diff-preservation.md
src/: plugin-main.cpp  rtsp-source.cpp  rtsp-source.hpp
